fix: Fix drawer scrollbar offset bug

--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,14 @@
   font-weight: 400;
   font-style: normal;
 }
+:root:has(
+  :is(
+    .drawer-toggle:checked,
+    .modal-open,
+    .modal:target,
+    .modal-toggle:checked + .modal,
+    .modal[open]
+  )
+) {
+  scrollbar-gutter: unset;
+}
